--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@ body{
 }
 * {
     box-sizing: border-box;
-
-
 }
 h1{
     background-color: black;
@@ -59,6 +57,11 @@ button{
     padding: 3px;
     margin: 5px;
 }
-article>button{
-
+.tex>p{
+    letter-spacing: 2px;
+    color: ;
+}
+a{
+    text-decoration: none;
+    color: darkred;
 }
